[gd_scene load_steps=11 format=2]

[ext_resource path="res://scene's/levels/Math/Panel.png" type="Texture" id=1]
[ext_resource path="res://scene's/levels/Math/finish_game/Ribbon.png" type="Texture" id=2]
[ext_resource path="res://scene's/levels/Math/finish_game/Close.png" type="Texture" id=3]
[ext_resource path="res://scene's/levels/Math/finish_game/Level Cleared.png" type="Texture" id=4]
[ext_resource path="res://scene's/character/character.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene's/levels/Math/finish_game/Finish_Ui.gd" type="Script" id=6]
[ext_resource path="res://theme/grisly-beast.regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scene's/levels/Math/finish_game/Arrow right.png" type="Texture" id=8]
[ext_resource path="res://scene's/levels/Math/finish_game/Exit.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Finish_Ui" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 6 )

[node name="panel" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -510.0
margin_top = -345.5
margin_right = 510.0
margin_bottom = 345.5
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="ribbon" type="TextureRect" parent="panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -500.0
margin_right = 500.0
margin_bottom = 297.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="LevelCleared" type="Sprite" parent="panel/ribbon"]
position = Vector2( 500, 85.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="character" parent="panel/ribbon" instance=ExtResource( 5 )]
position = Vector2( 817.65, 430.42 )
frame = 2
__meta__ = {
"_edit_lock_": true
}
curent_pos = 2

[node name="character2" parent="panel/ribbon" instance=ExtResource( 5 )]
position = Vector2( 243.65, 383.42 )
scale = Vector2( 0.366, 0.386 )
animation = "dog"
frame = 2
__meta__ = {
"_edit_lock_": true
}
animal = 1
curent_pos = 2

[node name="exit" type="TextureButton" parent="panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 29.0
margin_right = -12.0
margin_bottom = 128.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="pass" type="TextureButton" parent="panel"]
margin_left = 550.0
margin_top = 485.5
margin_right = 678.0
margin_bottom = 613.5
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Home" type="TextureButton" parent="panel"]
margin_left = 370.0
margin_top = 485.5
margin_right = 498.0
margin_bottom = 613.5
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -14.0
margin_right = 101.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "test"
align = 1
valign = 1

[connection signal="pressed" from="panel/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="panel/pass" to="." method="_on_pass_pressed"]
[connection signal="pressed" from="panel/Home" to="." method="_on_Home_pressed"]
